Fakebase scala migration part 3

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,26 @@
-__pycache__/
+__pycache__
 *.pyc
 *.egg-info
+.venv
 scrap*
 secrets.env
 venv/
 gitlab_credentials.ini
 .ipynb_checkpoints
-helm/coinbase-train/charts
-helm/coinbase-train/requirements.lock
+helm/*/charts
+helm/*/requirements.lock
 coinbase-train*.tgz
-.eggs/
+.eggs
 .mypy_cache
+build/
+dist/
+account.json
+*.iml
+scala/target
+scala/project/target
+scala/coinbaseml/target
+scala/coinbaseml/project/target
+scala/coinbaseml/project/project
+.idea
+scalapb
+coinbase_ml/fakebase/protos/fakebase_pb2*
