--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build:tests:
 
   script:
     - docker login registry.gitlab.com -p $GITLAB_PASSWORD -u $GITLAB_USERNAME
-    - docker-compose up --abort-on-container-exit
+    - docker-compose up --abort-on-container-exit --build
 
   stage: build
 
