--- a/dockerfiles/Dockerfile.gpu
+++ b/dockerfiles/Dockerfile.gpu
@@ -1,10 +1,22 @@
-FROM registry.gitlab.com/moonraker/base_images/coinbase_train_gpu:0.1.0-8b66cccc0d0ff7e222a5718dd08300e99a3172e1
+ARG BASE_IMAGE_VERSION=0.1.0-65abeb1d9b4ab30be11fe93fc471d9a992245c2b
+
+FROM registry.gitlab.com/moonraker/base_images/sbt:${BASE_IMAGE_VERSION} AS sbt-builder
+
+ADD ./ /app
+
+WORKDIR /app
+
+RUN make build-scala
+
+FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${BASE_IMAGE_VERSION}
 
 ENV PYTHONPATH=/app LANG=C.UTF-8
 
 ADD ./ /app
 
 WORKDIR /app
+
+COPY --from=sbt-builder /app/coinbaseml.jar ./
 
 RUN make install-gpu && \
 	make build-python-protos && \
