--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -8,7 +8,7 @@ ADD ./ /app
 
 WORKDIR /app
 
-RUN if [ "$TEST_MODE" = "true" ] ; then make test-scala && touch /app/coinbaseml.jar ; else make build-scala ; fi
+RUN if [ "$TEST_MODE" = "true" ] ; then make build-scala test-scala ; else make build-scala ; fi
 
 FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${BASE_IMAGE_VERSION}
 
