--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@
 version: '3'
 services:
   coinbase_ml_tests:
-    command: make build-python-protos test-python
+    command: make clean build-python-protos test-python
     build:
       args:
           TEST_MODE: "true"
