--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -12,7 +12,7 @@ RUN if [ "$TEST_MODE" = "true" ] ; then make build-scala test-scala ; else make 
 
 FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${BASE_IMAGE_VERSION}
 
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app RAY_USE_MULTIPROCESSING_CPU_COUNT=1
 
 ADD ./ /app
 
