--- a/helm/coinbase-ml-train/values.yaml
+++ b/helm/coinbase-ml-train/values.yaml
@@ -1,8 +1,8 @@
 job:
-  memory: 25000Mi
-  num_cpus: 0.0
-  num_gpus: 0
-  node_group: n1-standard-8-nvidia-tesla-p100
+  memory: 12000Mi
+  num_cpus: 3.6
+  num_gpus: 1
+  node_group: n1-standard-4-nvidia-tesla-p100
   sacred_config: staging
 
 notebook:
@@ -14,16 +14,15 @@ ray:
   deploy_ray_cluster: true
 
   head_deployment:
+    memory: 13000Mi
     num_cpus: 3.6
     num_gpus: 0
     node_group: c2-standard-4
 
   worker_deployments:
     cpu-workers:
+      memory_per_replica: 13000Mi
       num_cpus_per_replica: 3.6
       num_gpus_per_replica: 0
-      num_replicas: 0
+      num_replicas: 4
       node_group: c2-standard-4
-
-
-
