--- a/helm/coinbase-ml-train/values.yaml
+++ b/helm/coinbase-ml-train/values.yaml
@@ -6,6 +6,7 @@ job:
   sacred_config: staging
 
 notebook:
+  memory: 12000Mi
   num_cpus: 0.0
   num_gpus: 1
   node_group: n1-standard-4-nvidia-tesla-p100
@@ -24,5 +25,5 @@ ray:
       memory_per_replica: 13000Mi
       num_cpus_per_replica: 3.6
       num_gpus_per_replica: 0
-      num_replicas: 4
+      num_replicas: 2
       node_group: c2-standard-4
