--- a/dockerfiles/Dockerfile.gpu
+++ b/dockerfiles/Dockerfile.gpu
@@ -2,11 +2,13 @@ ARG BASE_IMAGE_VERSION=0.1.0-e4d3dbe7f92d53434968194ad4842dce0df70562
 
 FROM registry.gitlab.com/moonraker/base_images/coinbase_train_sbt:${BASE_IMAGE_VERSION} AS sbt-builder
 
+ARG PROJECT=coinbaseml
+
 ADD ./ /app
 
 WORKDIR /app
 
-RUN make build-scala
+RUN make build-scala project=$PROJECT
 
 FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${BASE_IMAGE_VERSION}
 
@@ -16,7 +18,7 @@ ADD ./ /app
 
 WORKDIR /app
 
-COPY --from=sbt-builder /app/coinbaseml.jar ./
+COPY --from=sbt-builder /tmp/moonraker/coinbaseml/coinbaseml.jar /tmp/moonraker/coinbaseml/coinbaseml.jar
 
 RUN make install-gpu && \
 	make build-python-protos && \
