--- a/helm/coinbase-ml-train/values.yaml
+++ b/helm/coinbase-ml-train/values.yaml
@@ -12,6 +12,11 @@ notebook:
   node_group: n1-standard-4-nvidia-tesla-p100
 
 ray:
+  gitlab-registry-secret:
+    enabled: false
+    registry:
+      username: test
+      password: test
   deploy_ray_cluster: true
 
   head_deployment:
@@ -27,3 +32,16 @@ ray:
       num_gpus_per_replica: 0
       num_replicas: 1
       node_group: c2-standard-4
+
+# Add in dummy values for secrets so linting passes
+CI_TOKEN: test
+mongodb_url: test
+
+mongodb-secret:
+  mongodb_url: test
+
+gitlab-registry-secret:
+  registry:
+    username: test
+    password: test
+
