--- a/helm/bqwriter/values.yaml
+++ b/helm/bqwriter/values.yaml
@@ -5,7 +5,7 @@ resources:
   memory: 1Gi
   num_cpus: 1.0
 
-# Mock values for secrets so linting doesn't fail
+# mock values for secrets so linting doesn't fail
 service_account_json: test
 
 gitlab-registry-secret:
