--- a/helm/coinbase-ml-train/templates/jupyter_deployment.yaml
+++ b/helm/coinbase-ml-train/templates/jupyter_deployment.yaml
@@ -33,7 +33,7 @@ spec:
       {{- end}}
 
       imagePullSecrets:
-      - name: {{.Release.Name}}-registry-credentials
+      - name: {{$release_name}}-registry-credentials
 
       containers:
 
@@ -97,7 +97,7 @@ spec:
           - mountPath: /dev/shm
             name: dshm
 
-          - mountPath: /secrets
+          - mountPath: {{.Values.ray.gcp_service_account_secret.mount_path}}
             name: service-account-json
             readOnly: true
 
