--- a/dockerfiles/Dockerfile.cpu
+++ b/dockerfiles/Dockerfile.cpu
@@ -16,7 +16,10 @@ RUN if [ "$TEST_MODE" = "true" ] ; then make build-scala test-scala ; else make 
 
 FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${RUNTIME_BASE_IMAGE_VERSION}
 
-ENV PYTHONPATH=/app RAY_USE_MULTIPROCESSING_CPU_COUNT=1
+ENV LD_BIND_NOW=1 \
+	NUM_DATABASE_READER_THREADS=2 \
+	PYTHONPATH=/app \
+	RAY_USE_MULTIPROCESSING_CPU_COUNT=1
 
 ADD ./ /app
 
