--- a/dockerfiles/Dockerfile.gpu
+++ b/dockerfiles/Dockerfile.gpu
@@ -14,7 +14,11 @@ RUN make build-scala project=$PROJECT
 
 FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${RUNTIME_BASE_IMAGE_VERSION}
 
-ENV PYTHONPATH=/app LANG=C.UTF-8 RAY_USE_MULTIPROCESSING_CPU_COUNT=1
+ENV LANG=C.UTF-8 \
+	LD_BIND_NOW=1 \
+	NUM_DATABASE_READER_THREADS=2 \
+	PYTHONPATH=/app \
+	RAY_USE_MULTIPROCESSING_CPU_COUNT=1
 
 ADD ./ /app
 
