--- a/dockerfiles/Dockerfile.gpu
+++ b/dockerfiles/Dockerfile.gpu
@@ -16,6 +16,7 @@ FROM registry.gitlab.com/moonraker/base_images/coinbase_train_cpu:${RUNTIME_BASE
 
 ENV LANG=C.UTF-8 \
 	LD_BIND_NOW=1 \
+	PYTHONUNBUFFERED=1 \
 	PYTHONPATH=/app \
 	RAY_USE_MULTIPROCESSING_CPU_COUNT=1
 
