--- a/helm/coinbase-ml-train/values.yaml
+++ b/helm/coinbase-ml-train/values.yaml
@@ -1,8 +1,14 @@
 job:
-  memory: 12000Mi
-  num_cpus: 3.5
-  num_gpus: 1
-  node_group: n1-standard-4-nvidia-tesla-p100
+  resources:
+    limits:
+      memory: 22000Mi
+      cpu: 3.6
+      nvidia.com/gpu: 1
+    requests:
+      memory: 22000Mi
+      cpu: 3.5
+      nvidia.com/gpu: 1
+  node_group: n1-highmem-4-nvidia-tesla-p100
   sacred_config: staging
 
 notebook:
@@ -35,7 +41,7 @@ ray:
       memory_per_replica: 13000Mi
       num_cpus_per_replica: 3.6
       num_gpus_per_replica: 0
-      num_replicas: 1
+      num_replicas: 5
       node_group: c2-standard-4
 
 # Add in dummy values for secrets so linting passes
