--- a/helm/coinbase-ml-train/templates/jupyter_service.yaml
+++ b/helm/coinbase-ml-train/templates/jupyter_service.yaml
@@ -1,6 +1,6 @@
 ---
 {{$release_name := .Release.Name | trunc 14}}
-{{if gt .Values.notebook.num_cpus 0.0}}
+{{if gt .Values.notebook.resources.requests.cpu 0.0}}
 apiVersion: v1
 kind: Service
 metadata:
