--- a/helm/coinbase-ml-train/values.yaml
+++ b/helm/coinbase-ml-train/values.yaml
@@ -12,10 +12,16 @@ job:
   sacred_config: staging
 
 notebook:
-  memory: 12000Mi
-  num_cpus: 0.0
-  num_gpus: 1
-  node_group: n1-standard-4-nvidia-tesla-p100
+  resources:
+    limits:
+      memory: 22000Mi
+      cpu: 0.0
+      nvidia.com/gpu: 1
+    requests:
+      memory: 22000Mi
+      cpu: 0.0
+      nvidia.com/gpu: 1
+  node_group: n1-highmem-4-nvidia-tesla-p100
 
 ray:
   gcp_service_account_secret:
