--- a/dockerfiles/Dockerfile.gpu
+++ b/dockerfiles/Dockerfile.gpu
@@ -18,7 +18,8 @@ ENV LANG=C.UTF-8 \
 	LD_BIND_NOW=1 \
 	PYTHONUNBUFFERED=1 \
 	PYTHONPATH=/app \
-	RAY_USE_MULTIPROCESSING_CPU_COUNT=1
+	RAY_USE_MULTIPROCESSING_CPU_COUNT=1 \
+	PATH="/usr/lib/graalvm/graalvm-ce-java11-20.2.0/bin/:${PATH}"
 
 ADD ./ /app
 
