Reorganize Python configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ disallow_untyped_defs = False
 disallow_untyped_defs = False
 
 [pylint]
-disable=C0330, R0401, R0801, W0511
+disable=C0330, R0401, R0801, W0511, missing-function-docstring, missing-module-docstring, missing-class-docstring
 good-names=T, h, i, j, f, x, y, s, t, id, pa, va, pb, vb, dt
 max-args=15
 max-attributes=20
