--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -17,7 +17,7 @@ disallow_untyped_defs = False
 
 [pylint]
 disable=C0330, R0401, R0801, W0511, missing-function-docstring, missing-module-docstring, missing-class-docstring
-good-names=A, T, h, i, j, f, x, y, s, t, id, pa, va, pb, vb, dt
+good-names=A, T, b, f, h, i, j, m, s, t, x, y, id, pa, va, pb, vb, dt
 max-args=20
 max-attributes=20
 max-locals=30
