--- a/helm/coinbaseml-trend-following/values.yaml
+++ b/helm/coinbaseml-trend-following/values.yaml
@@ -9,7 +9,7 @@ job:
       cpu: 3.6
       nvidia.com/gpu: 0
   node_group: c2-standard-4
-  sacred_config: ema_crossover_staging
+  sacred_config: bollinger_on_book_volume_staging
 
 ray:
   gcp_service_account_secret:
