--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -15,9 +15,12 @@ disallow_untyped_defs = False
 [mypy-coinbase_ml.trend_following.experiment_configs.*]
 disallow_untyped_defs = False
 
+[mypy-coinbase_ml.supervised.experiment_configs]
+disallow_untyped_defs = False
+
 [pylint]
-disable=C0330, R0401, R0801, W0511, missing-function-docstring, missing-module-docstring, missing-class-docstring
-good-names=A, T, b, f, h, i, j, m, s, t, x, y, id, pa, va, pb, vb, dt
+disable=C0330, R0401, R0801, W0511, missing-function-docstring, missing-module-docstring, missing-class-docstring, consider-using-from-import
+good-names=A, T, b, f, h, i, j, m, s, t, x, y, id, pa, va, pb, vb, dt, mu, t1, t2, u, l
 max-args=20
 max-attributes=20
 max-locals=30
