--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -19,8 +19,8 @@ disallow_untyped_defs = False
 disallow_untyped_defs = False
 
 [pylint]
-disable=C0330, R0401, R0801, W0511, missing-function-docstring, missing-module-docstring, missing-class-docstring, consider-using-from-import
-good-names=A, T, b, f, h, i, j, m, s, t, x, y, id, pa, va, pb, vb, dt, mu, t1, t2, u, l
+disable=C0330, R0401, R0801, W0511, missing-function-docstring, missing-module-docstring, missing-class-docstring, consider-using-from-import, no-member, unsubscriptable-object, useless-import-alias
+good-names=A, T, b, f, h, i, j, m, s, t, x, y, id, pa, va, pb, vb, dt, mu, t1, t2, u, l, df
 max-args=20
 max-attributes=20
 max-locals=30
